--- a/SM.vcxproj
+++ b/SM.vcxproj
@@ -139,7 +139,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Bulb.cpp" />
+    <ClCompile Include="FSM.cpp" />
     <ClCompile Include="SM.cpp" />
+    <ClCompile Include="stdafx.cpp" />
+    <ClCompile Include="targetver.cpp" />
+    <ClCompile Include="State.cpp" />
+    <ClCompile Include="Transition.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Bulb.h" />
+    <ClInclude Include="FSM.h" />
+    <ClInclude Include="State.h" />
+    <ClInclude Include="stdafx.h" />
+    <ClInclude Include="targetver.h" />
+    <ClInclude Include="Transition.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
